--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -54,8 +54,16 @@ a {
   display: flex;
   gap: 3vw;
 }
+.logout{
+  color: rgb(82, 12, 12);
+  padding-right: 10%;
+}
+.logout:hover{
+  rotate: 15deg;
+}
 .profile {
   color: white;
+  color: black;
 }
 .centerprofile {
   padding: 3vw;
@@ -78,13 +86,12 @@ a {
   justify-content: end;
   position: relative;
 }
-.editimage{
+.editimage {
   font-size: 2rem;
   position: absolute;
   bottom: 0%;
   right: 8%;
   cursor: pointer;
-
 }
 
 /* //landingpage */
@@ -112,7 +119,6 @@ a {
   cursor: pointer;
 }
 .project {
- 
   font-size: 2.5rem;
   font-weight: bold;
   color: white;
@@ -136,10 +142,8 @@ a {
   align-items: center;
   position: absolute;
   z-index: 3;
-
 }
 .layout h1 {
-
   color: white;
   font-size: 3.5rem;
   text-align: center;
@@ -158,24 +162,22 @@ a {
   cursor: pointer;
 }
 
-
 /* my products  */
 
-
-.myproducts{
+.myproducts {
   width: 100%;
-  /* height: 100vh; */
+  min-height: 100vh;
   display: flex;
   gap: 3rem;
   flex-wrap: wrap;
   justify-content: center;
   /* align-items: center; */
-  background-color: beige;
+  background-color: rgb(178, 178, 136);
 }
-.product{
+.product {
   width: 20%;
-  height:70% ;
-  margin-top:2% ;
+  height: 70%;
+  margin-top: 2%;
   background-color: rgb(209, 209, 209);
   border-radius: 20px;
   overflow: hidden;
@@ -183,41 +185,38 @@ a {
   border: 1px solid grey;
   position: relative;
 }
-.pimage{
+.pimage {
   width: 100%;
   height: 60%;
   /* background-color: aqua; */
-  
 }
-.pimage img{
+.pimage img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   background-position: cenetr;
   background-repeat: no-repeat;
   border-radius: 20px;
-  
-
 }
-.pbtn{
+.pbtn {
   display: flex;
   justify-content: space-between;
   padding: 3%;
 }
-.pbtn a{
+.pbtn a {
   text-decoration: none;
   color: blue;
   font-size: larger;
   font-weight: 700;
 }
 /* allproducts */
-.allbtn{
+.allbtn {
   display: flex;
   justify-content: space-between;
   padding: 3%;
   bottom: 2%;
 }
-.allbtn a{
+.allbtn a {
   text-decoration: none;
   color: green;
   font-size: larger;
@@ -228,32 +227,29 @@ a {
   background: pink;
 }
 
-
 /* upadate image css */
 
-
-.updateimage{
+.updateimage {
   width: 15%;
   height: 15%;
   object-fit: cover;
   background-position: cenetr;
   background-repeat: no-repeat;
   border-radius: 20px;
-  
 }
 
-.backarrow{
+.backarrow {
   font-size: 40px;
   display: flex;
   justify-content: start;
 }
-.homearrow{
+.homearrow {
   font-size: 40px;
   position: absolute;
   top: 0%;
   left: 3%;
 }
-.deleteuser{
+.deleteuser {
   font-size: 26px;
   color: tomato;
   background-color: transparent;
@@ -261,11 +257,11 @@ a {
   border-radius: 20px;
   padding: 2px 4px;
 }
-.deleteuser:hover{
-  background-color:tomato ;
+.deleteuser:hover {
+  background-color: tomato;
   color: black;
 }
-.updateuser{
+.updateuser {
   font-size: 26px;
   color: blue;
   background-color: transparent;
@@ -273,19 +269,17 @@ a {
   border-radius: 20px;
   padding: 2px 4px;
 }
-.updateuser:hover{
+.updateuser:hover {
   background: royalblue;
   color: whitesmoke;
 }
 
-
-.form-image{
+.form-image {
   display: none;
 }
 
-
 /* nav integration */
-nav{
+nav {
   height: 40%;
   /* background: rgba(0, 0, 0, 0.673); */
   color: white;
@@ -298,7 +292,6 @@ nav{
   left: -25%;
   opacity: 0;
   line-height: 50px;
-
 }
 .landingpageproject {
   position: fixed;
@@ -319,7 +312,6 @@ nav{
   position: absolute;
   z-index: 3;
   text-align: center;
-
 }
 /* .layoutproject h1{
   font-size: 5rem;
@@ -330,7 +322,7 @@ nav{
   font-size: 2rem;
 
 } */
-.leftproject{
+.leftproject {
   padding: 3%;
   width: 50%;
   /* height: 30%; */
@@ -341,11 +333,11 @@ nav{
   font-size: 3rem;
   color: white;
 }
-.leftproject a{
+.leftproject a {
   font-size: 1.5rem;
   color: rgb(0, 254, 0);
 }
-.leftproject button{
+.leftproject button {
   padding: 10px 20px;
   border-radius: 20px;
   font-size: 2rem;
@@ -354,7 +346,7 @@ nav{
   border: none;
 }
 
-.rightproject{
+.rightproject {
   padding: 2%;
   width: 50%;
   /* height: 30%; */
@@ -366,11 +358,11 @@ nav{
   font-size: 3rem;
   color: white;
 }
-.rightproject a{
+.rightproject a {
   font-size: 1.5rem;
   color: rgb(0, 254, 0);
 }
-.rightproject button{
+.rightproject button {
   padding: 10px 20px;
   border-radius: 20px;
   font-size: 2rem;
@@ -381,7 +373,7 @@ nav{
 
 /* footer */
 
-footer{
+footer {
   width: 100%;
   height: 25%;
   background: rgba(128, 128, 128, 0.685);
@@ -390,14 +382,14 @@ footer{
   justify-content: space-between;
   border-radius: 20px;
 }
-.leftfooter{
+.leftfooter {
   width: 30%;
   text-align: start;
   font-size: 2rem;
   line-height: 50px;
 }
 
-.rightfooter{
+.rightfooter {
   /* width: 30%; */
   text-align: start;
   font-size: 1.5rem;
@@ -416,7 +408,7 @@ footer{
   background-repeat: no-repeat;
   overflow: scroll;
 }
-.aboutpageproject p{
+.aboutpageproject p {
   font-size: 25px;
   text-align: start;
   line-height: 35px;
@@ -431,11 +423,9 @@ footer{
   position: absolute;
   z-index: 3;
   text-align: center;
-
 }
 
-
-.aboutfooter{
+.aboutfooter {
   width: 100%;
   height: 10%;
   background: rgba(128, 128, 128, 0.685);
@@ -445,8 +435,7 @@ footer{
   border-radius: 20px;
 }
 
-
-.aboutrightfooter{
+.aboutrightfooter {
   width: 60%;
   height: auto;
   text-align: start;
@@ -459,7 +448,8 @@ table {
   width: 100%;
   border-collapse: collapse;
 }
-th, td {
+th,
+td {
   border: 1px solid black;
   padding: 8px;
   text-align: left;
@@ -467,3 +457,185 @@ th, td {
 th {
   background-color: black;
 }
+
+/* resposive */
+
+@media (max-width: 600px) {
+  .leftproject {
+    margin-bottom:20px ;    
+    padding: 3%;
+    width: 100%;
+    overflow: auto;
+
+    /* height: 30%; */
+    background-color: rgba(174, 181, 179, 0.6);
+    border-radius: 20px;
+  }
+  .leftproject h1 {
+    font-size: 3rem;
+    color: white;
+  }
+  .leftproject a {
+    font-size: 1.5rem;
+    color: rgb(0, 254, 0);
+  }
+  .leftproject button {
+    padding: 10px 20px;
+    border-radius: 20px;
+    font-size: 2rem;
+    background-color: rgb(51, 51, 233);
+    color: white;
+    border: none;
+  }
+  
+  .rightproject {
+    margin-bottom:20px ;    
+
+    width: 100%;
+    margin-left: 0%;
+    background-color: rgba(6, 240, 162, 0.6);
+    border-radius: 20px;
+    overflow: auto;
+
+  }
+  .rightproject h1 {
+    font-size: 3rem;
+    color: white;
+  }
+  .rightproject a {
+    font-size: 1.5rem;
+    color: rgb(0, 254, 0);
+  }
+  .rightproject button {
+    padding: 10px 20px;
+    border-radius: 20px;
+    font-size: 2rem;
+    background-color: rgb(51, 51, 233);
+    color: white;
+    border: none;
+  }
+  .leftfooter{
+    display: none;
+
+  }
+  .rightfooter{
+    overflow: auto;
+    text-wrap: nowrap;
+
+  }
+  footer {
+    width: 100%;
+    height: 18%;
+    background: rgba(128, 128, 128, 0.685);
+    padding: 5%;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 20px;
+  }
+  /* profile */
+ 
+  .profile {
+    /* color: white; */
+    color: black;
+    font-size: xx-small;
+    /* background: rosybrown; */
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 25%;
+  }
+  .image {
+    display: block;
+    position: absolute;
+    top: 3%;
+    left: 15%;
+    /* border-radius: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background: rgb(239, 177, 177);
+    display: flex;
+    justify-content: end;
+    position: relative; */
+  }
+  .centerprofile {
+  color: black;
+}
+  /* nav */
+  nav {
+    height: 20%;
+    background: rgba(0, 0, 0, 0.673);
+    color: white;
+    position: absolute;
+    z-index: 11;
+    text-align: start;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    font-weight: 500;
+    top: 3%;  
+    left: 5%;
+    opacity: 1;
+    line-height: 25px;
+  }
+  .project {
+    display: none;
+  }
+.deleteupdate{
+  margin-top: 5%;
+  display: flex;
+  gap: 30px;
+  width: 100%;
+  /* background-color: red; */
+
+}
+  .deleteuser {
+    font-size: x-small;
+    color: tomato;
+    background-color: transparent;
+    border: 1px solid white;
+    border-radius: 20px;
+    padding: 2px 4px;
+  }
+  .deleteuser:hover {
+    background-color: tomato;
+    color: black;
+  }
+  .updateuser {
+    font-size: x-small;
+    color: blue;
+    background-color: transparent;
+    border: 1px solid white;
+    border-radius: 20px;
+    padding: 2px 4px;
+  }
+  .updateuser:hover {
+    background: royalblue;
+    color: whitesmoke;
+  }
+
+  /* myproducts */
+  .myproducts {
+    width: 100%;
+    /* height: 100vh; */
+    /* display: flex; */
+    /* gap: 0.5rem; */
+    /* flex-wrap: wrap; */
+    /* justify-content: center; */
+    /* align-items: center; */
+    background-color: beige;
+  }
+  .product {
+    width: 60%;
+    height: 70%;
+    margin-top: 2%;
+    background-color: rgb(209, 209, 209);
+    border-radius: 20px;
+    overflow: hidden;
+    padding: 4px;
+    border: 1px solid grey;
+    position: relative;
+  }
+}
+
+
