new project live link added

--- a/views/moreprojects.ejs
+++ b/views/moreprojects.ejs
@@ -65,7 +65,8 @@
       </p>
       <br />
       <br />
-      <a href="https://github.com/lodhiradhe123/brain.space.git" target="_main">
+      <a href="https://lodhiradhe123.github.io/brain-space-project/"><h1>Project Link:</h1></a>
+      <a href="https://lodhiradhe123.github.io/brain-space-project/" target="_main">
         <button>click</button>
       </a>
     </div>
